examplesdir = $(datadir)/${PACKAGE}/examples
dist_examples_DATA = PrintScoreAndParts.denemo  SeveralVerses.denemo Ossia.denemo ForcingBreaks.denemo InstrumentNames.denemo Cues.denemo MultiMeasureRests.denemo CautionaryAccidental.denemo ReminderAccidental.denemo SuggestedAccidental.denemo Upbeat.denemo RehearsalMarks.denemo Metronome.denemo RaggedBottom.denemo TextPosition.denemo
