pixmapsdir = $(datadir)/denemo/pixmaps
pixmaps_DATA = feta26-accidentals-leftparen.xbm \
feta26-accidentals-rightparen.xbm \
feta26-accidentals--1.xbm \
feta26-accidentals--2.xbm \
feta26-accidentals-0.xbm \
feta26-accidentals-1.xbm \
feta26-accidentals-2.xbm \
feta26-clefs-alto.xbm \
feta26-clefs-alto_change.xbm \
feta26-clefs-bass.xbm \
feta26-clefs-bass_change.xbm \
feta26-clefs-g_8.xbm \
feta26-clefs-treble.xbm \
feta26-clefs-treble_change.xbm \
feta26-dots-dot.xbm \
feta26-dots-repeatcolon.xbm \
feta26-flags-d3.xbm \
feta26-flags-d4.xbm \
feta26-flags-d5.xbm \
feta26-flags-d6.xbm \
feta26-flags-dgrace.xbm \
feta26-flags-u3.xbm \
feta26-flags-u4.xbm \
feta26-flags-u5.xbm \
feta26-flags-u6.xbm \
feta26-flags-ugrace.xbm \
feta26-noteheads--1.xbm \
feta26-noteheads--2.xbm \
feta26-noteheads-0.xbm \
feta26-noteheads-0diamond.xbm \
feta26-noteheads-1.xbm \
feta26-noteheads-1diamond.xbm \
feta26-noteheads-2.xbm \
feta26-noteheads-2cross.xbm \
feta26-noteheads-2diamond.xbm \
feta26-noteheads-2harmonic.xbm \
feta26-noteheads-ledgerending.xbm \
feta26-rests--1.xbm \
feta26-rests--2.xbm \
feta26-rests--4.xbm \
feta26-rests-0.xbm \
feta26-rests-0o.xbm \
feta26-rests-1.xbm \
feta26-rests-1o.xbm \
feta26-rests-2.xbm \
feta26-rests-2mensural.xbm \
feta26-rests-3.xbm \
feta26-rests-3mensural.xbm \
feta26-rests-4.xbm \
feta26-rests-4mensural.xbm \
feta26-rests-5.xbm \
feta26-rests-6.xbm \
feta26-rests-7.xbm \
feta26-scripts-accent.xbm \
feta26-scripts-arpeggio.xbm \
feta26-scripts-coda.xbm \
feta26-scripts-dfermata.xbm \
feta26-scripts-dmarcato.xbm \
feta26-scripts-downbow.xbm \
feta26-scripts-downprall.xbm \
feta26-scripts-dpedalheel.xbm \
feta26-scripts-dpedaltoe.xbm \
feta26-scripts-dstaccatissimo.xbm \
feta26-scripts-flageolet.xbm \
feta26-scripts-mordent.xbm \
feta26-scripts-open.xbm \
feta26-scripts-prall.xbm \
feta26-scripts-prallmordent.xbm \
feta26-scripts-prallprall.xbm \
feta26-scripts-repeatsign.xbm \
feta26-scripts-reverseturn.xbm \
feta26-scripts-segno.xbm \
feta26-scripts-sforzato.xbm \
feta26-scripts-staccato.xbm \
feta26-scripts-stopped.xbm \
feta26-scripts-tenuto.xbm \
feta26-scripts-thumb.xbm \
feta26-scripts-trilelement.xbm \
feta26-scripts-trill-element.xbm \
feta26-scripts-trill.xbm \
feta26-scripts-turn.xbm \
feta26-scripts-ufermata.xbm \
feta26-scripts-umarcato.xbm \
feta26-scripts-upbow.xbm \
feta26-scripts-upedalheel.xbm \
feta26-scripts-upedaltoe.xbm \
feta26-scripts-upprall.xbm \
feta26-scripts-ustaccatissimo.xbm \
feta26-scripts-trill-element.xbm \
feta26-timesig-C2-2.xbm \
feta26-timesig-C4-4.xbm \
feta26-timesig-old2-2.xbm \
feta26-timesig-old2-4.xbm \
feta26-timesig-old3-2.xbm \
feta26-timesig-old3-4.xbm \
feta26-timesig-old4-4.xbm \
feta26-timesig-old4-8.xbm \
feta26-timesig-old6-4.xbm \
feta26-timesig-old6-8.xbm \
feta26-timesig-old6-8alt.xbm \
feta26-timesig-old9-4.xbm \
feta26-timesig-old9-8.xbm \
notehead-0.xbm \
notehead-1.xbm \
notehead-2.xbm \
toomany.xbm \
accent.svg \
downbow.svg \
fermata.svg \
icon-template.svg  \
lheel.svg \
ltoe.svg \
marcato.svg \
mordent.svg \
reverse-turn.svg \
rheel.svg \
rtoe.svg \
staccatissimo.svg \
staccato.svg \
tenuto.svg \
trill.svg \
turn.svg \
upbow.svg \
icon-note-0.svg \
icon-note-1.svg \
icon-note-2.svg \
icon-note-3.svg \
icon-note-4.svg \
icon-rest-0.svg \
icon-rest-1.svg \
icon-rest-2.svg \
icon-rest-3.svg \
icon-rest-4.svg \
icon-rest-5.svg 

icondir=$(datadir)/pixmaps
icon_DATA=$(srcdir)/org.denemo.Denemo.png

desktopdir = $(datadir)/applications
desktop_DATA = org.denemo.Denemo.desktop

EXTRA_DIST = $(pixmaps_DATA) $(icon_DATA) $(desktop_DATA)
CLEANFILES = *~ #*#
