include $(top_srcdir)/build/glib-tap.mk

test_programs = \
    integration \
    unit

integration_SOURCES = \
    integration.c \
    common.c \
    common.h

unit_SOURCES = \
    unit.c \
    common.c \
    common.h

dist_test_data = \
    fixtures

test_data = 

include $(top_srcdir)/build/Makefile.am.gitignore
