bin_PROGRAMS = generate_source cairo_svg2path pageturner twopageturner
generate_source_SOURCES = generate_source.c
EXTRA_DIST = denemo_file_update
cairo_svg2path_SOURCES = cairo_svg2path.c
pageturner_SOURCES = pageturner.c
twopageturner_SOURCES = twopageturner.c
bin_SCRIPTS = \
  denemo_file_update
