bin_PROGRAMS = cairo_svg2path pageturner twopageturner pageswitcher annotator
EXTRA_DIST = denemo_file_update
cairo_svg2path_SOURCES = cairo_svg2path.c
pageturner_SOURCES = pageturner.c
twopageturner_SOURCES = twopageturner.c
pageswitcher_SOURCES = pageswitcher.c
annotator_SOURCES = annotator.c
bin_SCRIPTS = \
  denemo_file_update
