imagedir = $(datadir)/${PACKAGE}/manual/images
dist_image_DATA = 4fo2denemo.png          clefmenu.png            lpmode.png \
4for2abc.png            main.png \
4for2abcps.png          denemomain.png          navigationmenu.png \
4for2ly.png             displaymenu.png         orchestraltemplate5.png \
4for2new-page1.png      educationtemplate3.png  othermenu1.png \
4for2new-page2.png      fig1.png                playbackmenu.png \
4for2touchedly.png      fig2.png                polyphony.png \
addvc2currentstaff.png  fig3.png                setpreferences.png \
bandtemplate.png        filemenu.png            staffmenu.png \
choraltemplate1.png     generaltemplate4.png    tablituretemplate6.png \
churchtemplate2.png     keymenu.png             timemenu.png \
gotobegin.png		gotoend.png		stopmidi.png

