imagedir = $(datadir)/${PACKAGE}/manual/images
dist_image_DATA = \
4fo2denemo.png \
4for2abc.png \
4for2abcps.png \
4for2ly.png \
4for2new-page1.png \
4for2new-page2.png \
4for2touchedly.png \
ArticulationsPalette.png \
AudioPref.png \
AutoTypeset.png \
BarlinesPalette.png \
BeamingPalette.png \
Changeclefdialog.png \
ChordSymbolsPalette.png \
CommandCenter.png \
CommandTab.png \
CustomOrnamentsPalette.png \
DynamicsPalette.png \
ExternalsPref.png \
FiguredBassPalette.png \
MidiImportPalette.png \
MidiInControls.png \
MidiPref.png \
MiscellaneousPref.png \
ObjectEditor.png \
ObjectInspector.png \
OrnamentsPalette.png \
PaletteEntry.png \
PaletteMenu.png \
PianofortePalette.png \
PolyphonyPalette.png \
PreferencesDialog.png \
PrintView.png \
RepeatsPalette.png \
ScoreLayout.png \
ScorePropsEditor.png \
SourceView.png \
StaffVoicePropsEditor.png \
StringedInstrumentsPalette.png \
TiesPalette.png \
accent.png \
acciaccatura.png \
accidentals.png \
addvc2currentstaff.png \
appoggiatura.png \
arpeggio.png \
articulations.png \
bandtemplate.png \
blank.png \
caution.png \
changeinitialclef.png \
choraltemplate1.png \
chord.png \
churchtemplate2.png \
clefmenu.png \
coda.png \
copy.png \
cut.png \
denemomain.png \
displaymenu.png \
downbow.png \
downmordent.png \
downprall.png \
draft.png \
educationtemplate3.png \
expressions.png \
fermata.png \
fig1.png \
fig2.png \
fig3.png \
filemenu.png \
flageolet.png \
generaltemplate4.png \
glissando.png \
gotobegin.png \
gotoend.png \
grace.png \
home.png \
important.png \
initalkeydialog.png \
keymenu.png \
lheel.png \
lineprall.png \
longfermata.png \
lpmode.png \
ltoe.png \
main.png \
marcato.png \
mark1.png \
mordent.png \
navigationmenu.png \
new.png \
next.png \
note-page1.png \
note.png \
open.png \
orchestraltemplate5.png \
othermenu1.png \
paste.png \
playbackcontrols.png \
playbackmenu.png \
playmidi.png \
polyphony.png \
portato.png \
prall.png \
pralldown.png \
prallmordent.png \
prallprall.png \
prallup.png \
prev.png \
print.png \
redo.png \
rests.png \
reverseturn.png \
rheel.png \
rtoe.png \
save.png \
scorewizard.png \
secondending.png \
segno.png \
selectingkey.png \
setpreferences.png \
settimesigniture.png \
shortfermata.png \
signumcongruentime.png \
simplemelody.png \
simplerepeat.png \
staccatissimo.png \
staccato.png \
stacctissiimo.png \
staffmenu.png \
stopmidi.png \
stopped.png \
tablituretemplate6.png \
tenuto.png \
thumb.png \
timemenu.png \
tip.png \
toc-blank.png \
toc-minus.png \
toc-plus.png \
tremolo1.png \
tremolo2.png \
tremolo3.png \
trill.png \
tupletmarkers.png \
turn.png \
undo.png \
up.png \
upbeat.png \
upbow.png \
upmordent.png \
upprall.png \
varcoda.png \
verylongfermata.png \
warning.png
