imagedir = $(datadir)/${PACKAGE}/manual/images
dist_image_DATA = \
ArticulationsPalette.png \
cut.png \
MidiInControls.png \
MultiLine.png \
PaletteMenu.png \
save.png \
AudioPref.png \
denemomain.png \
MidiPref.png \
paste.png \
ScoreLayout.png \
BarlinesPalette.png \
DynamicsPalette.png \
MiscellaneousPref.png \
PianofortePalette.png \
ScorePropsEditor.png \
BeamingPalette.png \
ExternalsPref.png \
new.png \
playbackcontrols.png \
SimpleTitles.png \
BookTitles.png \
FiguredBassPalette.png \
NumericKeypad.jpg \
PolyphonyPalette.png \
SourceView.png \
ChordSymbolsPalette.png \
gotobegin.png \
ObjectEditor.png \
PreferencesDialog.png \
StaffVoicePropsEditor.png \
SchemeWindow.png \
CommandCenter.png \
gotoend.png \
ObjectInspector.png \
print.png \
StringedInstrumentsPalette.png \
CommandTab.png \
open.png \
PrintView.png \
PlaybackView.png \
TiesPalette.png \
copy.png \
OrnamentsPalette.png \
redo.png \
undo.png \
CustomOrnamentsPalette.png \
MidiImportPalette.png \
PaletteEntry.png \
DenemoDirectives.png \
RepeatsPalette.png \
InsertOrAppendChords.png 

