imagedir = $(datadir)/${PACKAGE}/manual/images
dist_image_DATA = \
ArticulationsPalette.png \
AudioPref.png \
BarlinesPalette.png \
BeamingPalette.png \
BookTitles.png \
ChordSymbolsPalette.png \
CommandCenter.png \
CommandTab.png \
copy.png \
CustomOrnamentsPalette.png \
cut.png \
DenemoDirectives.png \
denemomain.png \
DynamicsPalette.png \
ExternalsPref.png \
FiguredBassPalette.png \
gotobegin.png \
gotoend.png \
InsertOrAppendChords.png \
Lyrics.png \
MidiImportPalette.png \
MidiInControls.png \
MidiPref.png \
MiscellaneousPref.png \
MultiLine.png \
new.png \
ObjectEditor.png \
ObjectInspector.png \
open.png \
OrnamentsPalette.png \
PaletteEntry.png \
PaletteMenu.png \
paste.png \
PianofortePalette.png \
playbackcontrols.png \
PlaybackView.png \
PolyphonyPalette.png \
PreferencesDialog.png \
print.png \
PrintView.png \
redo.png \
RepeatsPalette.png \
save.png \
SchemeWindow.png \
ScoreLayout.png \
ScorePropsEditor.png \
SimpleTitles.png \
SourceView.png \
StaffVoicePropsEditor.png \
StringedInstrumentsPalette.png \
TiesPalette.png \
undo.png \
VirtualKeyboard.png

 

